--- a/DeCaptcha/pom.xml
+++ b/DeCaptcha/pom.xml
@@ -5,6 +5,11 @@
   <version>0.0.1-SNAPSHOT</version>
   
   <dependencies>
+  	<dependency>
+		<groupId>log4j</groupId>
+		<artifactId>log4j</artifactId>
+		<version>1.2.16</version>
+	</dependency>
   	
   	<dependency>
 		<groupId>org.apache.commons</groupId>
